# ViewpointAwareICP

./: .gitignore  CMakeLists.txt  README.md
include/: v_score.h  viewpointAwareICP.h
pcd/: src.pcd  src1.pcd  src2.pcd  tgt.pcd  tgt1.pcd  tgt2.pcd
src/: demo.cpp  demo_vis.cpp  v_score.cpp  viewpointAwareICP.cpp
